parser/tests/good/dynamic_formal_types.st
procedure p(
    arr: array 1..* of int,
    str: string(*),
    arrOfArrs: array 1..* of array 1..2 of int,
    arrOfStrs: array 1..* of string(*)
)
  % empty
end p
