parser/tests/bad/sub01-1.st
% the name after 'end' should be the name of the 'subprogram'
%   procedure

procedure p(i: int)
  % empty
end q
